# messages

./: .env.example  .gitignore  .gitmodules  API_PATH_MAPPING.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PROGRESS.md  SKILLS_RULE.md  rust-message-system-deployment.md  rust-message-system-solution.md  rust-message-system-test-plan.md
ddl/: messages-schema.sql
docs/: ARCHITECTURE_MESSAGE_FLOW.md  ENTERPRISE_MESSAGING_BEST_PRACTICES.md
src/: config.rs  error.rs  main.rs
src/cache/: mod.rs  redis_client.rs
src/channel/: log_file_channel.rs  mod.rs
src/handlers/: admin_handler.rs  message_handler.rs  mod.rs  setting_handler.rs  template_handler.rs
src/middleware/: auth.rs
src/models/: message.rs  message_template.rs  mod.rs  organization.rs  retry.rs  role.rs  tenant.rs  user.rs
src/queue/: consumer.rs  mod.rs  producer.rs
src/repositories/: message_repository.rs  mod.rs  organization_repository.rs  retry_repository.rs  template_repository.rs  user_repository.rs
src/services/: channel.rs  message_service.rs  mod.rs  push_service.rs  retry_service.rs  target_resolver.rs  template_service.rs
src/services/channels/: dingtalk.rs  email.rs  mod.rs  websocket.rs
src/utils/: jwt.rs  mod.rs  pagination.rs
src/websocket/: handler.rs  manager.rs  mod.rs
tests/: message-module-tests.http
