[package]
name = "message-system"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["."]
resolver = "2"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
dotenv = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dependencies]
# Web Framework
axum = { workspace = true, features = ["ws", "macros"] }
tokio = { workspace = true }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }

# Redis (use rustls to avoid OpenSSL dependency)
redis = { version = "0.24", default-features = false, features = ["tokio-comp", "connection-manager", "rustls"] }

# Message Queue
lapin = "2.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication
jsonwebtoken = "9.2"

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenv = { workspace = true }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { workspace = true }
async-trait = "0.1"
futures = "0.3"

# Template Engine (for message rendering)
tera = "1.19"

# Email (use rustls to avoid OpenSSL dependency)
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-rustls", "rustls-native-certs", "ring"] }

# Task Scheduler
tokio-cron-scheduler = "0.10"

[dev-dependencies]
axum-test = "14.0"
